PlanIT-Front-End-React/src/components/AnalyticsDashboard/AnalyticsDashboardStyle.css
/* Setting the analytics dashboard */
.avg5WeeksSpending {
    grid-area: avg5WeeksSpending;
}

.avg5WeeksBalance {
    grid-area: avg5WeeksBalance;
}

.forecastedNextWeekSpending {
    grid-area: forecastedNextWeekSpending;
}

.forecastedNextWeekBalance {
    grid-area: forecastedNextWeekBalance;
}

.dailySpendingGraph {
    grid-area: dailySpendingGraph;
}

.avg7DaysSMARecords {
    grid-area: avg7DaysSMARecords;
}

.financialRecommendation {
    grid-area: financialRecommendation;
}

.analyticsDashboard {
    background-color: transparent;
    min-height: calc(100vh - 70px);
    height: auto;
    width: 100vw;
    margin-left: 0px;
    margin-top: 70px;
    padding-top: 1.5rem;
    padding-bottom: 1.5rem;
    padding-right: 1.5rem;
    padding-left: 1.5rem;
    display: grid;
    gap: 1.5rem;
    grid-auto-columns: 1fr;
    grid-auto-rows: minmax(150px, auto);
    grid-template-areas: 
        'avg5WeeksSpending'
        'avg5WeeksBalance'
        'forecastedNextWeekSpending'
        'forecastedNextWeekBalance'
        'dailySpendingGraph'
        'dailySpendingGraph' 
        'avg7DaysSMARecords'
        'avg7DaysSMARecords'
        'avg7DaysSMARecords'
        'financialRecommendation'
        'financialRecommendation' 
        'financialRecommendation';
    overflow-y: auto; 

}

.mainDashboardBlocks {
    border-radius: 1rem;
    background-color: rgba(250, 254, 255, 0.2);
    padding: 10px;
}

.lineChart {
    overflow-y: auto;
}

.avg7DaysSMARecords td:nth-child(2) {
    white-space: nowrap;
}

.wordDashboard {
    color: white;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 18px;
    overflow-y: auto;
}

/* Setting things for tablet screens */
@media screen and (min-width: 900px) {
    /* Setting the dashboard for tablet*/
    .analyticsDashboard {
        background-color: transparent;
        height: 100vh;
        width: calc(100vw - 180px);
        margin-left: calc(180px + 1.5rem);
        margin-top: 0px;
        padding-top: 1.5rem;
        padding-bottom: 1.5rem;
        padding-right: 1.5rem;
        padding-left: 0rem;
        display: grid;
        gap: 1.5rem;
        grid-auto-columns: 1fr;
        grid-auto-rows: minmax(120px, auto);
        grid-template-areas:
        'avg5WeeksSpending avg5WeeksSpending avg5WeeksBalance avg5WeeksBalance'
        'avg5WeeksSpending avg5WeeksSpending avg5WeeksBalance avg5WeeksBalance'
        'forecastedNextWeekSpending forecastedNextWeekSpending forecastedNextWeekBalance forecastedNextWeekBalance'
        'forecastedNextWeekSpending forecastedNextWeekSpending forecastedNextWeekBalance forecastedNextWeekBalance'
        'dailySpendingGraph dailySpendingGraph avg7DaysSMARecords avg7DaysSMARecords'
        'dailySpendingGraph dailySpendingGraph avg7DaysSMARecords avg7DaysSMARecords'
        'financialRecommendation financialRecommendation financialRecommendation financialRecommendation' 
        'financialRecommendation financialRecommendation financialRecommendation financialRecommendation'
        'financialRecommendation financialRecommendation financialRecommendation financialRecommendation';
    }

    .mainDashboardBlocks {
        border-radius: 1rem;
        background-color: rgba(250, 254, 255, 0.2);
        box-sizing: border-box;
    }
}

/* Setting things for desktop and larger screens */
@media screen and (min-width: 1200px) {
    /* Setting the dashboard for desktop and larger screens */
    .analyticsDashboard {
        background-color: transparent;
        height: 100vh;
        width: calc(100vw - 180px);
        margin-left: calc(180px + 1.5rem);
        margin-top: 0px;
        padding-top: 1.5rem;
        padding-bottom: 1.5rem;
        padding-right: 1.5rem;
        padding-left: 0rem;
        display: grid;
        gap: 1.5rem;
        grid-auto-columns: 1fr;
        grid-auto-rows: minmax(170px, auto);
        grid-template-areas:
        'avg5WeeksSpending avg5WeeksSpending avg5WeeksBalance avg5WeeksBalance financialRecommendation financialRecommendation'
        'forecastedNextWeekSpending forecastedNextWeekSpending forecastedNextWeekBalance forecastedNextWeekBalance financialRecommendation financialRecommendation'
        'dailySpendingGraph dailySpendingGraph avg7DaysSMARecords avg7DaysSMARecords financialRecommendation financialRecommendation'
        'dailySpendingGraph dailySpendingGraph avg7DaysSMARecords avg7DaysSMARecords financialRecommendation financialRecommendation'
        'dailySpendingGraph dailySpendingGraph avg7DaysSMARecords avg7DaysSMARecords financialRecommendation financialRecommendation';
    }

    .mainDashboardBlocks {
        border-radius: 1rem;
        background-color: rgba(250, 254, 255, 0.2);
    }
}

